--- a/Hobbies.html
+++ b/Hobbies.html
@@ -12,7 +12,7 @@
     </ul>
     Also have a passion for coding and web development
     Heres my previous work <br>
-    Click Below
+    Click Below <br>
     <a href="https://awwd1th.github.io/Games_Practice_Beginner/"> <img src="./previous work.png" alt="Other works" height="250"></a>
 </body>
 </html>
